--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.1.0",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
     "moment": "^2.30.1",
