--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
-    "@mui/x-date-pickers": "^7.1.0",
+    "@mui/x-date-pickers": "^5.0.12",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
     "moment": "^2.30.1",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
